force-app/main/default/objects/Slack_Authentication__c/Slack_Authentication__c.object-meta.xml
<CustomObject>
    <label>Slack Authentication</label>
    <nameField>
        <displayFormat>SLACK-USER-{0000}</displayFormat>
        <label>Slack Authentication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slack Authentication</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>