force-app/main/default/objects/Slack_Authentication__c/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>