force-app/main/default/objects/Slack_Authentication__c/fields/Slack_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Slack_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>Slack User ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>